# ospray

./: .gitignore  CMakeCache.txt
apps/ospExamples/: GLFWOSPRayWindow.cpp  GLFWOSPRayWindow.h  imgui_impl_glfw_gl3.cpp  ospExample.cpp
apps/ospTutorial/: ospTutorial.c  ospTutorial.cpp
modules/polycam/: CMakeLists.txt
modules/polycam/ospray/: CMakeLists.txt
modules/polycam/ospray/camera/: PolynomialCamera.cpp  PolynomialCamera.h  PolynomialCamera.ih  PolynomialCamera.ispc
modules/polyfilter/: CMakeLists.txt  PolyFilterFrameOp.cpp  PolyFilterFrameOp.h
modules/polyfilter/TruncPoly/: TruncPolySystem.hh
modules/polyfilter/include/: spectrum.h
modules/polyparallel/: CMakeLists.txt  PolyParallelFrameOp.cpp  PolyParallelFrameOp.h
modules/polyparallel/include/: CImg.h
ospray/: .cproject  .project
ospray/api/: ISPCDevice.cpp
ospray/common/: Data.h  Managed.h
ospray/fb/: LocalFB.cpp
